2007-04-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: remove unused
	HALF_SECOND definition, spotted by Aidan Delaney
	<a.j.delaney@brighton.ac.uk> (Closes: #431404)

2007-04-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_set_reorderable),
	(set_playing_icon), (init_treeview), (totem_playlist_add_one_mrl),
	(totem_playlist_set_playing):
	* src/totem-playlist.h:
	* src/totem-remote.c: (totem_lirc_to_command):
	* src/totem-remote.h:
	* src/totem.c: (play_pause_set_label), (totem_action_stop),
	(totem_action_set_mrl_with_warning), (totem_action_remote),
	(playlist_changed_cb), (video_widget_create):
	Use the play and pause icons in the playlist to show the current
	state, as in Rhythmbox, adapted from patch by <jgoday@gmail.com>
	(Closes: #408402)

	Add --printvolume to get the current volume on the command-line

2007-04-17  Frederic Crozat  <fcrozat@mandriva.com>

	* src/totem.c: (totem_action_open_location):
	Remove one libglade call by moving variables init (bug #430661).

2007-04-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (add_lang_action), (create_lang_actions):
	Fix language labels when we have multiple occurences of the
	same languages (eg. was "en #2", is "English #2" now)

2007-04-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c: (totem_options_process_for_server):
	Plug a few leaks

2007-04-15  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/galago/*: Patch from Philip Withnall
	<bugzilla@tecnocode.co.uk> to merge the Galago calling code
	and the rest of the plugin, fixes a crasher, and unsets
	idleness properly if accounts have been added/removed
	while playing in fullscreen (Closes: #428770)

2007-04-13  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/screenshot.glade:
	* data/totem.schemas.in:
	* src/totem-screenshot.c: (totem_screenshot_make_filename_for_dir),
	(totem_screenshot_temp_file_create),