@@ -1,5 +1,10 @@
 2007-04-19  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/totem-plugin.h: Patch from Christian Persch
+	<chpe@gnome.org> to avoid relocations (Closes: #430272)
+
+2007-04-19  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-video-thumbnailer.c: remove unused
 	HALF_SECOND definition, spotted by Aidan Delaney
 	<a.j.delaney@brighton.ac.uk> (Closes: #431404)
